--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <hr class="m-0" />
 
             <!-- Medias-->
-            <section class="resume-section" id="medias">
+            <section class="resume-section" id="fundings">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Fundings</h2>
                     <div class="resume-section-content">
@@ -389,7 +389,8 @@
                         <div class="flex-grow-1">
                           <div><a href="https://data.snf.ch/grants/grant/181689"><b>Doc.CH Swiss National Science Foundation (SNSF)</b></a><br>
                           <i>Beliefs and expectation effects in health concerns about modern technologies</i><br>
-                          Principal investigator and grant recipient: Corentin A. Wicht, CHF 207’608</div>
+                          Principal investigator and grant recipient: Corentin A. Wicht<br>
+                          &#128181; CHF 207’608</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2018-2022</span></div>
                       </div>
