--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             </section>
             <hr class="m-0" />
 
-            <!-- Medias-->
+            <!-- Fundings-->
             <section class="resume-section" id="fundings">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Fundings</h2>
@@ -389,8 +389,30 @@
                         <div class="flex-grow-1">
                           <div><a href="https://data.snf.ch/grants/grant/181689"><b>Doc.CH Swiss National Science Foundation (SNSF)</b></a><br>
                           <i>Beliefs and expectation effects in health concerns about modern technologies</i><br>
-                          Principal investigator and grant recipient: Corentin A. Wicht<br>
+                          PI and grant recipient: Corentin A. Wicht<br>
                           &#128181; CHF 207’608</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018-2022</span></div>
+                      </div>
+
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="https://en.wikipedia.org/wiki/University_of_Fribourg#/media/File:Universit%C3%A4t_Freiburg_(Schweiz)_logo.svg" width="200"> </div>
+                        <div class="flex-grow-1">
+                          <div><a href="https://www.unifr.ch/researcher/fr/financement/bailleurs-de-fonds/fonds-recherche.html"><b>Fonds du Centenaire (University of Fribourg)</b></a><br>
+                          <i>Neural correlates of placebo effects of caffeine intake</i><br>
+                          PI and grant recipient: PD. Dr. Lucas Spierer, scientific collaborator: Corentin A. Wicht<br>
+                          &#128181; CHF 4’170</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2019-2022</span></div>
+                      </div>
+
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Logo_Universit%C3%A9_de_Lausanne.svg" width="200"> </div>
+                        <div class="flex-grow-1">
+                          <div><a href="https://www.unil.ch/ssp/fr/home/menuinst/recherche/english/services-to-researchers/funding.html"><b>SSP Faculty Fund (University of Lausanne)</b></a><br>
+                          <i>Are placebo effects important when being worried about blue-light (slow-wave) emitting screens</i><br>
+                          PI and grant recipient: Prof. Christine Mohr, scientific collaborator: Corentin A. Wicht<br>
+                          &#128181; CHF 6’869</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2018-2022</span></div>
                       </div>
