--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">Research</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">Fundings</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#fundings">Fundings</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#medias">Medias</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
