--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                       </div>
 
                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="https://en.wikipedia.org/wiki/University_of_Fribourg#/media/File:Universit%C3%A4t_Freiburg_(Schweiz)_logo.svg" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Universit%C3%A4t_Freiburg_%28Schweiz%29_logo.svg" width="200"> </div>
                         <div class="flex-grow-1">
                           <div><a href="https://www.unifr.ch/researcher/fr/financement/bailleurs-de-fonds/fonds-recherche.html"><b>Fonds du Centenaire (University of Fribourg)</b></a><br>
                           <i>Neural correlates of placebo effects of caffeine intake</i><br>
@@ -414,7 +414,7 @@
                           PI and grant recipient: Prof. Christine Mohr, scientific collaborator: Corentin A. Wicht<br>
                           &#128181; CHF 6’869</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2018-2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018-2019</span></div>
                       </div>
 
                     </div>
