Changes to hyperlinks related to Cortex and EJN publications

--- a/index.html
+++ b/index.html
@@ -318,16 +318,16 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/EJN2021.png" width="200"> </div>
                         <div class="flex-grow-1">
-                        <div><a href="https://doi.org/10.5281/zenodo.4541048">Experience with opioids does not modify the brain network involved in expectations of placebo analgesia</a><br>
-                        C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2021, European Journal of Neuroscience, Registered Report, <i>accepted for publication</i>.</div>
+                        <div><a href="https://onlinelibrary.wiley.com/doi/10.1111/ejn.15645">Experience with opioids does not modify the brain network involved in expectations of placebo analgesia</a><br>
+                        C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2022, European Journal of Neuroscience, Registered Report, <i>in press</i>.</div>
                         </div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/Cortex2019.png" width="200"> </div>
                         <div class="flex-grow-1">
-                        <div><a href="https://doi.org/10.17605/OSF.IO/2VABK">Neural correlates of expectations induced effects of caffeine intake on executive functions</a><br>
-                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, Registered Report, <i>accepted for publication</i>.</div>
+                        <div><a href="https://www.sciencedirect.com/science/article/pii/S0010945222000557">Neural correlates of expectations induced effects of caffeine intake on executive functions</a><br>
+                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, Registered Report, <i>in press</i>.</div>
                         </div>
                     </div>
 
