Changed SNSF logo

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
                       <!-- Funding sources -->
                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="https://www.cinfo.ch/sites/default/files/styles/thumbnail_700x400/public/snf_def.jpg?itok=k9GFf9ni" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/SNSF.png" width="200"> </div>
                         <div class="flex-grow-1">
                           <div><a href="https://data.snf.ch/grants/grant/181689"><b>Doc.CH Swiss National Science Foundation (SNSF)</b></a><br>
                           <i>Beliefs and expectation effects in health concerns about modern technologies</i><br>
