Adjusted title --> PhD

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Corentin
-                        <span class="text-primary">Wicht</span>, MSc.
+                        <span class="text-primary">Wicht</span>, PhD.
                     </h1>
                     <div class="subheading mb-5">
                         corentin.wicht@unifr.ch </div>
@@ -63,8 +63,8 @@
                         </div>
 
                         <div class="flex-shrink-0 pl-5">
-                            <a href="https://p3.snf.ch/project-181689" data-toggle="tooltip" data-placement="bottom" title="Swiss National Science Foundation"><img src="assets/img/Logo_SNF.png" height="30"></a>
-                            <h3>SNSF Doc.CH PhD student</h3><br><br>
+                            <a href="https://www.ctu.unibe.ch/media/logo_unibern@2x.png" data-toggle="tooltip" data-placement="bottom" title="Swiss National Science Foundation"><img src="assets/img/Logo_SNF.png" height="30"></a>
+                            <h3>CLinical Data Manager</h3><br><br>
                         </div>
                     </div>
 
