--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                         <div class="flex-shrink-0 pl-5">
                             <a href="https://www.ctu.unibe.ch/media/logo_unibern@2x.png" data-toggle="tooltip" data-placement="bottom" title="Swiss National Science Foundation"><img src="assets/img/Logo_SNF.png" height="30"></a>
-                            <h3>CLinical Data Manager</h3><br><br>
+                            <h3>Clinical Data Manager</h3><br><br>
                         </div>
                     </div>
 
