Adeed new font awesome icons

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                         <a class="social-icon" href="https://github.com/CorentinWicht"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/corentinwicht/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://www.researchgate.net/profile/Wicht-Corentin"><i class="fab fa-researchgate"></i></a>
+                        <a class="social-icon" href="https://orcid.org/0000-0003-0789-277X"><i class="fa-brands fa-orcid"></i></a>
+                        <a class="social-icon" href="https://zenodo.org/search?page=1&size=20&q=corentin%20wicht"><i class="fa-solid fa-database"></i></a>
                     </div>
                 </div>
             </section>
