--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/ESJ2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="">Predictors for returning to paid employment after transient ischemic attack and minor ischemic stroke </a><br>
-                        C.A. Wicht, C.F. Chavan, J.-M. Annoni, P. Balmer, J. Aellen, A.M. Humm, F. Crettaz von Roten, L. Spierer, F. Medlin.  European Stroke Journal, <i>submitted</i>.</div>
+                        C.A. Wicht, C.F. Chavan, J.-M. Annoni, P. Balmer, J. Aellen, A.M. Humm, F. Crettaz von Roten, L. Spierer, F. Medlin. <i>in prep</i>.</div>
                         </div>
                     </div>
 
@@ -329,7 +329,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/Cortex2019.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://www.sciencedirect.com/science/article/pii/S0010945222000557">Neural correlates of expectations induced effects of caffeine intake on executive functions</a><br>
-                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, Registered Report, <i>in press</i>.</div>
+                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2022, Cortex, Registered Report, <i>150, 61-84</i>.</div>
                         </div>
                     </div>
 
