Improved publication details

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/EJN2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://onlinelibrary.wiley.com/doi/10.1111/ejn.15645">Experience with opioids does not modify the brain network involved in expectations of placebo analgesia</a><br>
-                        C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2022, European Journal of Neuroscience, Registered Report, <i>in press</i>.</div>
+                        C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2022, European Journal of Neuroscience, Registered Report, <i>55, 7, 1840-1858</i>.</div>
                         </div>
                     </div>
 
@@ -340,7 +340,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroImage2020.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://www.sciencedirect.com/science/article/pii/S1053811920302986?via%3Dihub">Acute alcohol intoxication and expectations reshape the spatiotemporal functional architecture of executive control</a><br>
-                        F. Ribordy Lambert, C.A. Wicht, M. Mouthon, L. Spierer. 2020, Neuroimage.</div>
+                        F. Ribordy Lambert, C.A. Wicht, M. Mouthon, L. Spierer. 2020, Neuroimage, <i>215, e116811</i>.</div>
                         </div>
                     </div>
 
@@ -351,10 +351,10 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/FrontNeurosci2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://www.frontiersin.org/articles/10.3389/fnins.2021.594536/full">Beta Electroencephalographic Oscillation Is a Potential GABAergic Biomarker of Chronic Peripheral Neuropathic Pain</a><br>
-                        M. Texeira, C. Mancini, C.A. Wicht, G. Maestretti, T. Kuntzer, D. Cazzoli, M. Mouthon, J.-M. Annoni, J. Nsimire Chabwine. 2021, Frontiers in Neuroscience.</div>
+                        M. Texeira, C. Mancini, C.A. Wicht, G. Maestretti, T. Kuntzer, D. Cazzoli, M. Mouthon, J.-M. Annoni, J. Nsimire Chabwine. 2021, Frontiers in Neuroscience, <i>15, e594536</i>.</div>
                         </div>
                         <div><a href="https://www.jns-journal.com/article/S0022-510X(19)30857-3/fulltext">Patients with fibromyalgia display two different clinical profiles based on their GABAergic EEG markers: Preliminary results</a><br>
-                        C. Mancini, C.A. Wicht, M. Mouthon, S. Goetz, J. Nsimire Chabwine. 2019, Journal of the Neurological Sciences.</div>
+                        C. Mancini, C.A. Wicht, M. Mouthon, S. Goetz, J. Nsimire Chabwine. 2019, Journal of the Neurological Sciences, <i>405, e116535</i>.</div>
                         </div>
 
                     <br>
