Minor adjustments to GCP certificate

--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Good Clinical Practice Certificate (GCP ICH E6(R2))</h3>
+                            <div class="subheading mb-3">Clinical Investigators I & II courses</div>
+                            <p><a href="https://www.ctu.unibe.ch/training_courses/research_ethics_and_gcp/clinical_investigators_i/index_eng.html">CTU</a>, Bern, CH</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">University of Applied Sciences and Arts, Fribourg, CH</h3>
                             <div class="subheading mb-3">Continuing education: Subcutaneous injection certificate</div>
                             <p><a href="https://www.hefr.ch/fr/">HES-SO</a></p>
@@ -213,14 +222,6 @@
                         <div class="flex-shrink-0"><span class="text-primary">2020</span></div>
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Good Clinical Practice Certificate (GCP E6(R2) 2016)</h3>
-                            <div class="subheading mb-3">Online formation</div>
-                            <p><a href="https://elearning.trree.org/course/index.php?categoryid=1&lang=fr">TRREE</a></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2018</span></div>
-                    </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
