Adjusting publication information

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/ESJ2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="">Predictors for returning to paid employment after transient ischemic attack and minor ischemic stroke </a><br>
-                        C.A. Wicht, C.F. Chavan, J.-M. Annoni, P. Balmer, J. Aellen, A.M. Humm, F. Crettaz von Roten, L. Spierer, F. Medlin. <i>in prep</i>.</div>
+                        C.A. Wicht, C.F. Chavan, J.-M. Annoni, P. Balmer, J. Aellen, A.M. Humm, F. Crettaz von Roten, L. Spierer, F. Medlin. 2022, Journal of Personalized Medicine, <i>12, 7</i>.</div>
                         </div>
                     </div>
 
