--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
                       <!-- Funding sources -->
                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/SNSF.png" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/UNIBE.png" width="200"> </div>
                         <div class="flex-grow-1">
                           <div><a href="https://data.snf.ch/grants/grant/181689"><b>Doc.CH Swiss National Science Foundation (SNSF)</b></a><br>
                           <i>Beliefs and expectation effects in health concerns about modern technologies</i><br>
