--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
 
                         <div class="flex-shrink-0 pl-5">
-                            <a href="https://www.ctu.unibe.ch/media/logo_unibern@2x.png" data-toggle="tooltip" data-placement="bottom" title="Swiss National Science Foundation"><img src="assets/img/Logo_SNF.png" height="30"></a>
+                            <a href="https://www.ctu.unibe.ch" data-toggle="tooltip" data-placement="bottom" title="Clinical Trial Unit (CTU), University of Bern"><img src="assets/img/UNIBE.png" height="30"></a>
                             <h3>Clinical Data Manager</h3><br><br>
                         </div>
                     </div>
@@ -388,7 +388,7 @@
 
                       <!-- Funding sources -->
                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/UNIBE.png" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/SNSF.png" width="200"> </div>
                         <div class="flex-grow-1">
                           <div><a href="https://data.snf.ch/grants/grant/181689"><b>Doc.CH Swiss National Science Foundation (SNSF)</b></a><br>
                           <i>Beliefs and expectation effects in health concerns about modern technologies</i><br>
