--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         </div>
 
                         <div class="flex-shrink-0 pl-5">
-                            <a href="https://www.ctu.unibe.ch" data-toggle="tooltip" data-placement="bottom" title="Clinical Trial Unit (CTU), University of Bern"><img src="assets/img/UNIBE.png" height="100"></a>
-                            <h3>Clinical Data Manager</h3><br><br>
+                            <a href="https://www.unifr.ch/it/fr/it-scientifique.html" data-toggle="tooltip" data-placement="bottom" title="Scientific IT (SIT), University of Fribourg"><img src="assets/img/UNIFR.svg" height="100"></a>
+                            <h3>Data Scientist</h3><br><br>
                         </div>
                     </div>
 
@@ -83,6 +83,15 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Data Scientist</h3>
+                            <div class="subheading mb-3"><a href="https://www.unifr.ch/it/fr/it-scientifique.html">Scientific IT (SIT), University of Fribourg, CH</a></div>
+                            <p>Data scientist staff member in the Scientific IT (SIT) services</a></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">02.2023-01.2024</span></div>
+                    </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -271,6 +280,8 @@
                           <ul class="list-inline dev-icons">
                             <li class="list-inline-item"><span class="iconify" data-icon="file-icons:matlab"></span></li>
                             <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
+                            <li class="list-inline-item"><object data="/assets/img/Shiny.ico" width="50" height="50"> </object></li>
+                            <li class="list-inline-item"><i class="fab fa-docker"></i></li>
                             <li class="list-inline-item"><i class="fab fa-git"></i></li>
                             <li class="list-inline-item"><i class="fab fa-python"></i></li>
                             <li class="list-inline-item"><i class="fas fa-file-code"></i></li>
@@ -467,7 +478,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">Hobbies</div>
-                            <p>hiking · biking · climbing  · cooking</p><br>
+                            <p>hiking · biking · climbing · gardening · cooking</p><br>
 
                             <div class="subheading mb-3">Music</div>
                             <p>guitar (since age of 10) · <a href="https://www.facebook.com/FightClubBooking">live concerts programming</a></p><br>
