--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Corentin
-                        <span class="text-primary">Wicht</span>, PhD.
+                        <span class="text-primary">Wicht</span>, PhD
                     </h1>
                     <div class="subheading mb-5">
                         corentin.wicht@unifr.ch </div>
@@ -210,7 +210,7 @@
                             <p>Supervisor: <a href="https://www.unifr.ch/med/fr/section/departments/nms/people/11048/b2de9">PD Dr Lucas Spierer</a> <br>
                             Co-supervisor: <a href="https://psychologie.unibas.ch/de/personen/jens-gaab/curriculum-vitae/">Prof Jens Gaab</a> </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2018-Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018-2022</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -483,7 +483,7 @@
                             <div class="subheading mb-3">Music</div>
                             <p>guitar (since age of 10) · <a href="https://www.facebook.com/FightClubBooking">live concerts programming</a></p><br>
                               <div class="subheading mb-4">Studio albums</div>
-                                <div class="subheading mb-1">hubris.</div>
+                                <div class="subheading mb-1">Hubris.</div>
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                     <div class="flex-shrink-0-im pr-5">
                                       <a href="https://hubrisband.bandcamp.com/album/apocryphal-gravity"><img src=https://f4.bcbits.com/img/a2851901234_10.jpg width="200"> </a>
