--- a/index.html
+++ b/index.html
@@ -280,10 +280,11 @@
                           <ul class="list-inline dev-icons">
                             <li class="list-inline-item"><span class="iconify" data-icon="file-icons:matlab"></span></li>
                             <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
-                            <li class="list-inline-item"><object data="/assets/img/Shiny.ico" width="50" height="50"> </object></li>
+                            <li class="list-inline-item"><object data="/assets/img/Shiny_BW.ico" width="50" height="50"> </object></li>
                             <li class="list-inline-item"><i class="fab fa-docker"></i></li>
                             <li class="list-inline-item"><i class="fab fa-git"></i></li>
                             <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                            <li class="list-inline-item"><object data="/assets/img/Jupyter_BW.ico" width="50" height="50"> </object></li>
                             <li class="list-inline-item"><i class="fas fa-file-code"></i></li>
                             <li class="list-inline-item"><i class="fas fa-file-word"></i></li>
                             <li class="list-inline-item"><i class="fas fa-file-excel"></i></li>
